--- a/GroupStore/View/MasterPage.master
+++ b/GroupStore/View/MasterPage.master
@@ -7,17 +7,94 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link href="../Content/bootstrap.min.css" rel="stylesheet">
     <script src="../Scripts/bootstrap.min.js"></script>
+    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     <title></title>
     <asp:ContentPlaceHolder id="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
 <body>
-    <form id="form1" runat="server">
-    <div>
-        <asp:ContentPlaceHolder id="ContentPlaceHolder1" runat="server">
+  <header>
+        <nav class="navbar navbar-expand-sm navbar-dark bg-secondary bg-gradient">
+            <div class="container-fluid">
+                <a href="#">
+                    <img src="#" height="40" /></a>
+                <!-- el icono responsive que aparece cuando la ventana se acorta-->
+                <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <!-- Menu del perfil -->
+                <div class="dropdown order-sm-last m-md-3 mb-md-0 mt-md-0">
+                    <button class="btn btn-secondary bg-gradient dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                        <asp:Image ID="imgPerfil" Height="40px" runat="server" CssClass="border border-success rounded-circle" />
+                        <span runat="server" id="newNotificacion" class="position-absolute top-0 start-0 translate-middle p-2 bg-danger border border-light rounded-circle"></span>
+                    </button>
+                    <asp:MultiView ID="mvDropDown" runat="server">
+                        <asp:View ID="mvDropDownInvitado" runat="server">
+                            <ul class="dropdown-menu dropdown-menu-end" runat="server" aria-labelledby="dropdownMenuButton1">
+                                <li><a class="dropdown-item" href="VRegistro.aspx">Registro</a></li>
+                                <li><a class="dropdown-item" href="VInicioSesion.aspx">Login</a></li>
+                            </ul>
+                        </asp:View>
+                        <asp:View ID="nvDropDownLogin" runat="server">
+                            <ul class="dropdown-menu dropdown-menu-end" runat="server" aria-labelledby="dropdownMenuButton1">
+                                <li><a class="dropdown-item" id="aVerPerfil" runat="server" onserverclick="aVerPerfil_ServerClick">Ver perfil  <span runat="server" id="badge" class="badge bg-danger">4</span></a></li>
+                                <li><a class="dropdown-item" id="Salir" onserverclick="logOut_Click" runat="server">Log Out</a>
+                            </ul>
+                        </asp:View>
+                    </asp:MultiView>
+
+                </div>
+                <!--Los menus que se ocultan cuando se acorta la ventana -->
+                <div class="collapse navbar-collapse" id="mynavbar">
+                    <asp:MultiView ID="mvNav" runat="server">
+                        <asp:View ID="mvNavInvitado" runat="server">
+                            <ul class="navbar-nav me-auto" runat="server">
+                                <li class="nav-item"><a class="nav-link" href="VRegistro.aspx">Registro</a></li>
+                                <li class="nav-item"><a class="nav-link" href="VInicioSesion.aspx">Login</a></li>
+                            </ul>
+                        </asp:View>
+                        <asp:View ID="mvNavLogin" runat="server">
+                            <ul class="navbar-nav me-auto" runat="server">
+                                <li class="nav-item"><a class="nav-link" href="crearEvento.aspx">Crear evento</a></li>
+                            </ul>
+                        </asp:View>
+                    </asp:MultiView>
+                </div>
+                <!---->
+            </div>
+        </nav>
+    </header>
+    <section>
+        <asp:ContentPlaceHolder id="body" runat="server">
         
         </asp:ContentPlaceHolder>
-    </div>
-    </form>
+    </section>
+     <footer class="bg-secondary bg-gradient text-center text-white position-static">
+        <!-- Grid container -->
+        <div class="container p-4 pb-0">
+            <!-- Section: Social media -->
+            <section class="mb-4">
+                <!-- Facebook -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-facebook-f"></i></a>
+                <!-- Twitter -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-twitter"></i></a>
+                <!-- Google -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-google"></i></a>
+                <!-- Instagram -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-instagram"></i></a>
+                <!-- Linkedin -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-linkedin-in"></i></a>
+                <!-- Github -->
+                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-github"></i></a>
+            </section>
+            <!-- Section: Social media -->
+        </div>
+        <!-- Grid container -->
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+            Copyright © 2021 powered by: GroupStore
+        </div>
+        <!-- Copyright -->
+    </footer>
 </body>
 </html>
