--- a/GroupStore/View/MasterPage.master
+++ b/GroupStore/View/MasterPage.master
@@ -4,16 +4,16 @@
 
 <html>
 <head runat="server">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link href="../Content/bootstrap.min.css" rel="stylesheet">
     <script src="../Scripts/bootstrap.min.js"></script>
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     <title></title>
-    <asp:ContentPlaceHolder ID="head" runat="server">
+    <asp:ContentPlaceHolder id="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
 <body>
-    <header>
+  <header>
         <nav class="navbar navbar-expand-sm navbar-dark bg-secondary bg-gradient">
             <div class="container-fluid">
                 <a href="#">
@@ -22,16 +22,17 @@
                 <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+               
+                <button type="button" class="btn btn-dark">
+                    Notificaciones <span class="badge bg-text-light">4</span> <svg viewBox="0 0 28 28" alt="" fill="cyan" height="20" width="20">
+                    <path d="M7.847 23.488C9.207 23.488 11.443 23.363 14.467 22.806 13.944 24.228 12.581 25.247 10.98 25.247 9.649 25.247 8.483 24.542 7.825 23.488L7.847 23.488ZM24.923 15.73C25.17 17.002 24.278 18.127 22.27 19.076 21.17 19.595 18.724 20.583 14.684 21.369 11.568 21.974 9.285 22.113 7.848 22.113 7.421 22.113 7.068 22.101 6.79 22.085 4.574 21.958 3.324 21.248 3.077 19.976 2.702 18.049 3.295 17.305 4.278 16.073L4.537 15.748C5.2 14.907 5.459 14.081 5.035 11.902 4.086 7.022 6.284 3.687 11.064 2.753 15.846 1.83 19.134 4.096 20.083 8.977 20.506 11.156 21.056 11.824 21.986 12.355L21.986 12.356 22.348 12.561C23.72 13.335 24.548 13.802 24.923 15.73Z"></path>
+                    </svg> 
+
+                </button>
+                
 
                 <!-- Menu del perfil -->
                 <div class="dropdown order-sm-last m-md-3 mb-md-0 mt-md-0">
-                    <button type="button" class="btn btn-dark">
-                        <a href="/notifications/" class="text-decoration-none text-light">Notificaciones <span class="badge text-light"></span>
-                            <svg viewBox="0 0 28 28" alt="" fill="cyan" height="20" width="20">
-                                <path d="M7.847 23.488C9.207 23.488 11.443 23.363 14.467 22.806 13.944 24.228 12.581 25.247 10.98 25.247 9.649 25.247 8.483 24.542 7.825 23.488L7.847 23.488ZM24.923 15.73C25.17 17.002 24.278 18.127 22.27 19.076 21.17 19.595 18.724 20.583 14.684 21.369 11.568 21.974 9.285 22.113 7.848 22.113 7.421 22.113 7.068 22.101 6.79 22.085 4.574 21.958 3.324 21.248 3.077 19.976 2.702 18.049 3.295 17.305 4.278 16.073L4.537 15.748C5.2 14.907 5.459 14.081 5.035 11.902 4.086 7.022 6.284 3.687 11.064 2.753 15.846 1.83 19.134 4.096 20.083 8.977 20.506 11.156 21.056 11.824 21.986 12.355L21.986 12.356 22.348 12.561C23.72 13.335 24.548 13.802 24.923 15.73Z"></path>
-                            </svg>
-                        </a>
-                    </button>
                     <button class="btn btn-secondary bg-gradient dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                         <asp:Image ID="imgPerfil" Height="40px" runat="server" CssClass="border border-success rounded-circle" />
                         <span runat="server" id="newNotificacion" class="position-absolute top-0 start-0 translate-middle p-2 bg-danger border border-light rounded-circle"></span>
@@ -73,7 +74,8 @@
         </nav>
     </header>
     <section>
-        <asp:ContentPlaceHolder ID="body" runat="server">
+        <asp:ContentPlaceHolder id="body" runat="server">
+        
         </asp:ContentPlaceHolder>
     </section>
     <footer class=" bg-dark bg-gradient text-center text-white position-static">
